mobile responsive menubar, some padding margin fixed, footer contact section alignment fixed

--- a/public/tailwind-style.css
+++ b/public/tailwind-style.css
@@ -2447,8 +2447,8 @@ html {
   top: 8rem;
 }
 
-.-top-0 {
-  top: -0px;
+.-top-4 {
+  top: -1rem;
 }
 
 .right-0 {
@@ -2461,26 +2461,6 @@ html {
 
 .top-\[68px\] {
   top: 68px;
-}
-
-.-top-4 {
-  top: -1rem;
-}
-
-.-top-16 {
-  top: -4rem;
-}
-
-.-top-14 {
-  top: -3.5rem;
-}
-
-.-top-12 {
-  top: -3rem;
-}
-
-.-top-10 {
-  top: -2.5rem;
 }
 
 .z-50 {
@@ -2553,6 +2533,14 @@ html {
   margin-top: 1rem;
 }
 
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
 .block {
   display: block;
 }
@@ -2589,12 +2577,12 @@ html {
   height: 12rem;
 }
 
-.min-h-\[60vh\] {
-  min-height: 60vh;
+.h-10 {
+  height: 2.5rem;
 }
 
-.min-h-\[70vh\] {
-  min-height: 70vh;
+.min-h-\[60vh\] {
+  min-height: 60vh;
 }
 
 .w-full {
@@ -2637,20 +2625,16 @@ html {
   width: 1rem;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
 .w-4\/6 {
   width: 66.666667%;
 }
 
-.w-8 {
-  width: 2rem;
-}
-
 .flex-none {
   flex: none;
-}
-
-.flex-auto {
-  flex: 1 1 auto;
 }
 
 .basis-1\/3 {
@@ -2659,6 +2643,10 @@ html {
 
 .basis-2\/3 {
   flex-basis: 66.666667%;
+}
+
+.basis-1\/2 {
+  flex-basis: 50%;
 }
 
 .basis-full {
@@ -2725,10 +2713,6 @@ html {
   gap: 3rem;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .whitespace-nowrap {
   white-space: nowrap;
 }
@@ -2771,17 +2755,13 @@ html {
   border-color: rgb(168 85 247 / var(--tw-border-opacity));
 }
 
-.bg-black\/80 {
-  background-color: rgb(0 0 0 / 0.8);
+.bg-slate-900\/95 {
+  background-color: rgb(15 23 42 / 0.95);
 }
 
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-black\/95 {
-  background-color: rgb(0 0 0 / 0.95);
 }
 
 .bg-purple-400\/75 {
@@ -2806,10 +2786,6 @@ html {
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
-.bg-slate-900\/95 {
-  background-color: rgb(15 23 42 / 0.95);
 }
 
 .bg-gradient-to-r {
@@ -2963,10 +2939,6 @@ html {
   padding-top: 1rem;
 }
 
-.pt-8 {
-  padding-top: 2rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -3058,24 +3030,9 @@ html {
   color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
-.text-\[\#0D88EF\] {
+.text-slate-200 {
   --tw-text-opacity: 1;
-  color: rgb(13 136 239 / var(--tw-text-opacity));
-}
-
-.text-\[\#0A66C2\] {
-  --tw-text-opacity: 1;
-  color: rgb(10 102 194 / var(--tw-text-opacity));
-}
-
-.text-\[\#1D9BF0\] {
-  --tw-text-opacity: 1;
-  color: rgb(29 155 240 / var(--tw-text-opacity));
-}
-
-.text-\[\#B9BBBD\] {
-  --tw-text-opacity: 1;
-  color: rgb(185 187 189 / var(--tw-text-opacity));
+  color: rgb(226 232 240 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -3225,8 +3182,8 @@ html {
     top: -7rem;
   }
 
-  .md\:-top-20 {
-    top: -5rem;
+  .md\:-top-12 {
+    top: -3rem;
   }
 
   .md\:order-first {
